WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121904
REGRESSION (
r156355
) Links / interactive elements inside nested tables are unclickable
https://bugs.webkit.org/show_bug.cgi?id=121904
Summary
REGRESSION (r156355) Links / interactive elements inside nested tables are un...
Philippe Wittenbergh
Reported
2013-09-25 06:20:15 PDT
Created
attachment 212565
[details]
test case Possibly from
http://trac.webkit.org/changeset/156355
Sample URL: on bugzilla.mozilla.org
https://bugzilla.mozilla.org/show_bug.cgi?id=468568
Try to click on an attachment link. In the attached test case: links inside the cyan block (parent table) are unclickable. If I remove the ‘box-shadow’ on the inner table (left column), magically the link start to work. I don’t think that is the only trigger. Margin: auto is (possibly) needed, more? This page:
http://www.atimes.com
also exhibits the issue (try the article links or the navigation column, light blue on the left), but individual pages work correctly.
Attachments
test case
(923 bytes, text/html)
2013-09-25 06:20 PDT
,
Philippe Wittenbergh
no flags
Details
patch
(5.67 KB, patch)
2013-09-25 10:35 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2013-09-25 06:25:55 PDT
Looks like I lost a ! here: - if (child->isBox() && !toRenderBox(child)->hasSelfPaintingLayer()) { - LayoutPoint childPoint = flipForWritingModeForChild(toRenderBox(child), adjustedLocation); - if (child->nodeAtPoint(request, result, locationInContainer, childPoint, action)) { + if (row->hasSelfPaintingLayer()) { I think this might be it.
Antti Koivisto
Comment 2
2013-09-25 10:35:01 PDT
Created
attachment 212598
[details]
patch
Antti Koivisto
Comment 3
2013-09-25 10:46:01 PDT
https://trac.webkit.org/r156404
Thanks for the quick test case Philippe. It was very helpful.
Antti Koivisto
Comment 4
2013-09-25 11:27:21 PDT
***
Bug 121912
has been marked as a duplicate of this bug. ***
Philippe Wittenbergh
Comment 5
2013-09-25 17:31:52 PDT
r156422
works perfectly fine. Thanks for the quick fix.
Antti Koivisto
Comment 6
2013-09-25 19:13:53 PDT
<
rdar://problem/15081686
>
Alexey Proskuryakov
Comment 7
2013-09-26 10:51:58 PDT
***
Bug 121911
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug