REGRESSION (r156355) Links / interactive elements inside nested tables are unclickable https://bugs.webkit.org/show_bug.cgi?id=121904

Reviewed by Andreas Kling.

Source/WebCore:

Test: fast/table/hittest-self-painting.html

Original reduction by Philippe Wittenbergh.

* rendering/RenderTableRow.cpp:
(WebCore::RenderTableRow::styleDidChange):

    Tighten a bit.

(WebCore::RenderTableRow::nodeAtPoint):
* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::nodeAtPoint):

    These flipped accidentally in r156355.

LayoutTests:

* fast/table/hittest-self-painting-expected.txt: Added.
* fast/table/hittest-self-painting.html: Added.



Canonical link: https://commits.webkit.org/139909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156404 268f45cc-cd09-0410-ab3c-d52691b4dbfc